--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+## July 23, 2020 - 1.4.0
+- Support timeout while muting a user
+
 ## June 23, 2020 - 1.3.1
 - Set a generic user agent for file/image get to prevent bot detection
 
