--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+## September 10, 2020 - 1.5.0
+- Support for query members
+- Prefer literals over constructors to simplify code
+
 ## July 23, 2020 - 1.4.0
 - Support timeout while muting a user
 
