--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+## October 20, 2020 - 1.7.0
+- Added support for blocklists
+
 ## September 24, 2020 - 1.6.0
 - Support for creating custom commands
 
